Src/Main/MetaDslx.Compiler.Antlr4/Compiler/Antlr4RoslynParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\balaz\AppData\Local\Temp\qdj1wbpt.ycw\Antlr4RoslynParser.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MetaDslx.Compiler.Antlr4Roslyn {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class Antlr4RoslynParser : Parser {
	public const int
		TOKEN_REF=1, RULE_REF=2, LEXER_CHAR_SET=3, LINE_COMMENT=4, INT=5, STRING_LITERAL=6, 
		UNTERMINATED_STRING_LITERAL=7, BEGIN_ARGUMENT=8, BEGIN_ACTION=9, OPTIONS=10, 
		TOKENS=11, CHANNELS=12, IMPORT=13, FRAGMENT=14, LEXER=15, PARSER=16, GRAMMAR=17, 
		PROTECTED=18, PUBLIC=19, PRIVATE=20, RETURNS=21, LOCALS=22, THROWS=23, 
		CATCH=24, FINALLY=25, MODE=26, TRUE=27, FALSE=28, NULL=29, COLON=30, COLONCOLON=31, 
		COMMA=32, SEMI=33, LPAREN=34, RPAREN=35, LBRACE=36, RBRACE=37, RARROW=38, 
		LT=39, GT=40, ASSIGN=41, QUESTION=42, STAR=43, PLUS_ASSIGN=44, PLUS=45, 
		OR=46, DOLLAR=47, RANGE=48, DOT=49, AT=50, POUND=51, NOT=52, ID=53, WS=54, 
		ERRCHAR=55, END_ARGUMENT=56, UNTERMINATED_ARGUMENT=57, ARGUMENT_CONTENT=58, 
		END_ACTION=59, UNTERMINATED_ACTION=60, ACTION_CONTENT=61, UNTERMINATED_CHAR_SET=62, 
		DOC_COMMENT=63, BLOCK_COMMENT=64, DOC_COMMENT_STAR=65;
	public const int
		RULE_grammarSpec = 0, RULE_grammarType = 1, RULE_prequelConstruct = 2, 
		RULE_optionsSpec = 3, RULE_option = 4, RULE_optionValue = 5, RULE_delegateGrammars = 6, 
		RULE_delegateGrammar = 7, RULE_tokensSpec = 8, RULE_channelsSpec = 9, 
		RULE_idList = 10, RULE_annotatedIdentifier = 11, RULE_action = 12, RULE_actionScopeName = 13, 
		RULE_actionBlock = 14, RULE_argActionBlock = 15, RULE_modeSpec = 16, RULE_rules = 17, 
		RULE_ruleSpec = 18, RULE_parserRuleSpec = 19, RULE_exceptionGroup = 20, 
		RULE_exceptionHandler = 21, RULE_finallyClause = 22, RULE_rulePrequel = 23, 
		RULE_ruleReturns = 24, RULE_throwsSpec = 25, RULE_localsSpec = 26, RULE_ruleAction = 27, 
		RULE_ruleModifiers = 28, RULE_ruleModifier = 29, RULE_ruleBlock = 30, 
		RULE_ruleAltList = 31, RULE_labeledAlt = 32, RULE_propertiesBlock = 33, 
		RULE_lexerRuleSpec = 34, RULE_lexerRuleBlock = 35, RULE_lexerAltList = 36, 
		RULE_lexerAlt = 37, RULE_lexerElements = 38, RULE_lexerElement = 39, RULE_labeledLexerElement = 40, 
		RULE_lexerBlock = 41, RULE_lexerCommands = 42, RULE_lexerCommand = 43, 
		RULE_lexerCommandName = 44, RULE_lexerCommandExpr = 45, RULE_altList = 46, 
		RULE_alternative = 47, RULE_element = 48, RULE_labeledElement = 49, RULE_ebnf = 50, 
		RULE_blockSuffix = 51, RULE_ebnfSuffix = 52, RULE_lexerAtom = 53, RULE_atom = 54, 
		RULE_notSet = 55, RULE_blockSet = 56, RULE_setElement = 57, RULE_block = 58, 
		RULE_ruleref = 59, RULE_characterRange = 60, RULE_terminal = 61, RULE_elementOptions = 62, 
		RULE_elementOption = 63, RULE_identifier = 64, RULE_annotation = 65, RULE_annotationBody = 66, 
		RULE_annotationAttributeList = 67, RULE_annotationAttribute = 68, RULE_expressionList = 69, 
		RULE_qualifiedName = 70, RULE_expression = 71, RULE_literal = 72, RULE_annotationIdentifier = 73, 
		RULE_boolLiteral = 74, RULE_nullLiteral = 75;
	public static readonly string[] ruleNames = {
		"grammarSpec", "grammarType", "prequelConstruct", "optionsSpec", "option", 
		"optionValue", "delegateGrammars", "delegateGrammar", "tokensSpec", "channelsSpec", 
		"idList", "annotatedIdentifier", "action", "actionScopeName", "actionBlock", 
		"argActionBlock", "modeSpec", "rules", "ruleSpec", "parserRuleSpec", "exceptionGroup", 
		"exceptionHandler", "finallyClause", "rulePrequel", "ruleReturns", "throwsSpec", 
		"localsSpec", "ruleAction", "ruleModifiers", "ruleModifier", "ruleBlock", 
		"ruleAltList", "labeledAlt", "propertiesBlock", "lexerRuleSpec", "lexerRuleBlock", 
		"lexerAltList", "lexerAlt", "lexerElements", "lexerElement", "labeledLexerElement", 
		"lexerBlock", "lexerCommands", "lexerCommand", "lexerCommandName", "lexerCommandExpr", 
		"altList", "alternative", "element", "labeledElement", "ebnf", "blockSuffix", 
		"ebnfSuffix", "lexerAtom", "atom", "notSet", "blockSet", "setElement", 
		"block", "ruleref", "characterRange", "terminal", "elementOptions", "elementOption", 
		"identifier", "annotation", "annotationBody", "annotationAttributeList", 
		"annotationAttribute", "expressionList", "qualifiedName", "expression", 
		"literal", "annotationIdentifier", "boolLiteral", "nullLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, "'options'", 
		"'tokens'", "'channels'", "'import'", "'fragment'", "'lexer'", "'parser'", 
		"'grammar'", "'protected'", "'public'", "'private'", "'returns'", "'locals'", 
		"'throws'", "'catch'", "'finally'", "'mode'", "'true'", "'false'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TOKEN_REF", "RULE_REF", "LEXER_CHAR_SET", "LINE_COMMENT", "INT", 
		"STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", "BEGIN_ARGUMENT", "BEGIN_ACTION", 
		"OPTIONS", "TOKENS", "CHANNELS", "IMPORT", "FRAGMENT", "LEXER", "PARSER", 
		"GRAMMAR", "PROTECTED", "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "THROWS", 
		"CATCH", "FINALLY", "MODE", "TRUE", "FALSE", "NULL", "COLON", "COLONCOLON", 
		"COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "RARROW", "LT", 
		"GT", "ASSIGN", "QUESTION", "STAR", "PLUS_ASSIGN", "PLUS", "OR", "DOLLAR", 
		"RANGE", "DOT", "AT", "POUND", "NOT", "ID", "WS", "ERRCHAR", "END_ARGUMENT", 
		"UNTERMINATED_ARGUMENT", "ARGUMENT_CONTENT", "END_ACTION", "UNTERMINATED_ACTION", 
		"ACTION_CONTENT", "UNTERMINATED_CHAR_SET", "DOC_COMMENT", "BLOCK_COMMENT", 
		"DOC_COMMENT_STAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Antlr4RoslynParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public Antlr4RoslynParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class GrammarSpecContext : ParserRuleContext {
		public GrammarTypeContext grammarType() {
			return GetRuleContext<GrammarTypeContext>(0);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(Antlr4RoslynParser.SEMI, 0); }
		public RulesContext rules() {
			return GetRuleContext<RulesContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(Antlr4RoslynParser.Eof, 0); }
		public ITerminalNode[] DOC_COMMENT() { return GetTokens(Antlr4RoslynParser.DOC_COMMENT); }
		public ITerminalNode DOC_COMMENT(int i) {
			return GetToken(Antlr4RoslynParser.DOC_COMMENT, i);
		}
		public AnnotationContext[] annotation() {
			return GetRuleContexts<AnnotationContext>();
		}
		public AnnotationContext annotation(int i) {
			return GetRuleContext<AnnotationContext>(i);
		}
		public PrequelConstructContext[] prequelConstruct() {
			return GetRuleContexts<PrequelConstructContext>();
		}
		public PrequelConstructContext prequelConstruct(int i) {
			return GetRuleContext<PrequelConstructContext>(i);
		}
		public ModeSpecContext[] modeSpec() {
			return GetRuleContexts<ModeSpecContext>();
		}
		public ModeSpecContext modeSpec(int i) {
			return GetRuleContext<ModeSpecContext>(i);
		}
		public GrammarSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammarSpec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterGrammarSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitGrammarSpec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGrammarSpec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GrammarSpecContext grammarSpec() {
		GrammarSpecContext _localctx = new GrammarSpecContext(Context, State);
		EnterRule(_localctx, 0, RULE_grammarSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==DOC_COMMENT) {
				{
				{
				State = 152; Match(DOC_COMMENT);
				}
				}
				State = 157;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==DOLLAR) {
				{
				{
				State = 158; annotation();
				}
				}
				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 164; grammarType();
			State = 165; identifier();
			State = 166; Match(SEMI);
			State = 170;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPTIONS) | (1L << TOKENS) | (1L << CHANNELS) | (1L << IMPORT) | (1L << AT))) != 0)) {
				{
				{
				State = 167; prequelConstruct();
				}
				}
				State = 172;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 173; rules();
			State = 177;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==MODE || _la==DOLLAR) {
				{
				{
				State = 174; modeSpec();
				}
				}
				State = 179;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 180; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GrammarTypeContext : ParserRuleContext {
		public ITerminalNode LEXER() { return GetToken(Antlr4RoslynParser.LEXER, 0); }
		public ITerminalNode GRAMMAR() { return GetToken(Antlr4RoslynParser.GRAMMAR, 0); }
		public ITerminalNode PARSER() { return GetToken(Antlr4RoslynParser.PARSER, 0); }
		public GrammarTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammarType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterGrammarType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitGrammarType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGrammarType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GrammarTypeContext grammarType() {
		GrammarTypeContext _localctx = new GrammarTypeContext(Context, State);
		EnterRule(_localctx, 2, RULE_grammarType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 187;
			switch (TokenStream.La(1)) {
			case LEXER:
				{
				State = 182; Match(LEXER);
				State = 183; Match(GRAMMAR);
				}
				break;
			case PARSER:
				{
				State = 184; Match(PARSER);
				State = 185; Match(GRAMMAR);
				}
				break;
			case GRAMMAR:
				{
				State = 186; Match(GRAMMAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrequelConstructContext : ParserRuleContext {
		public OptionsSpecContext optionsSpec() {
			return GetRuleContext<OptionsSpecContext>(0);
		}
		public DelegateGrammarsContext delegateGrammars() {
			return GetRuleContext<DelegateGrammarsContext>(0);
		}
		public TokensSpecContext tokensSpec() {
			return GetRuleContext<TokensSpecContext>(0);
		}
		public ChannelsSpecContext channelsSpec() {
			return GetRuleContext<ChannelsSpecContext>(0);
		}
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public PrequelConstructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prequelConstruct; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterPrequelConstruct(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitPrequelConstruct(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrequelConstruct(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrequelConstructContext prequelConstruct() {
		PrequelConstructContext _localctx = new PrequelConstructContext(Context, State);
		EnterRule(_localctx, 4, RULE_prequelConstruct);
		try {
			State = 194;
			switch (TokenStream.La(1)) {
			case OPTIONS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 189; optionsSpec();
				}
				break;
			case IMPORT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 190; delegateGrammars();
				}
				break;
			case TOKENS:
				EnterOuterAlt(_localctx, 3);
				{
				State = 191; tokensSpec();
				}
				break;
			case CHANNELS:
				EnterOuterAlt(_localctx, 4);
				{
				State = 192; channelsSpec();
				}
				break;
			case AT:
				EnterOuterAlt(_localctx, 5);
				{
				State = 193; action();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionsSpecContext : ParserRuleContext {
		public ITerminalNode OPTIONS() { return GetToken(Antlr4RoslynParser.OPTIONS, 0); }
		public ITerminalNode LBRACE() { return GetToken(Antlr4RoslynParser.LBRACE, 0); }
		public ITerminalNode RBRACE() { return GetToken(Antlr4RoslynParser.RBRACE, 0); }
		public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public OptionsSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionsSpec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterOptionsSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitOptionsSpec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionsSpec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionsSpecContext optionsSpec() {
		OptionsSpecContext _localctx = new OptionsSpecContext(Context, State);
		EnterRule(_localctx, 6, RULE_optionsSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 196; Match(OPTIONS);
			State = 197; Match(LBRACE);
			State = 201;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TOKEN_REF || _la==RULE_REF) {
				{
				{
				State = 198; option();
				}
				}
				State = 203;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 204; Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(Antlr4RoslynParser.ASSIGN, 0); }
		public OptionValueContext optionValue() {
			return GetRuleContext<OptionValueContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(Antlr4RoslynParser.SEMI, 0); }
		public OptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_option; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterOption(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitOption(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOption(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OptionContext option() {
		OptionContext _localctx = new OptionContext(Context, State);
		EnterRule(_localctx, 8, RULE_option);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 206; identifier();
			State = 207; Match(ASSIGN);
			State = 208; optionValue();
			State = 209; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionValueContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] DOT() { return GetTokens(Antlr4RoslynParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(Antlr4RoslynParser.DOT, i);
		}
		public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public ActionBlockContext actionBlock() {
			return GetRuleContext<ActionBlockContext>(0);
		}
		public OptionValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.EnterOptionValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAntlr4RoslynParserListener typedListener = listener as IAntlr4RoslynParserListener;
			if (typedListener != null) typedListener.ExitOptionValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAntlr4RoslynParserVisitor<TResult> typedVisitor = visitor as IAntlr4RoslynParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionValue(this);
			else return visitor.VisitChildren(this);
		}
	}
